--- a/src/app/employee-dashboard/employee-dashboard.component.html
+++ b/src/app/employee-dashboard/employee-dashboard.component.html
@@ -15,8 +15,8 @@
                 />
               </div>
               <div class="welcome-det">
-                <h3>Welcome, John Doe</h3>
-                <p>Monday, 20 May 2019</p>
+                <h3>Welcome, {{ eachEmployee.name }}</h3>
+                <p>{{ currentDate }}</p>
               </div>
             </div>
           </div>
