--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -56,7 +56,7 @@
           ></a>
           <ul style="display: none">
             <li><a class="" href="employees">All Employees</a></li>
-            <li><a class="" href="holidays">Holidays</a></li>
+            <!-- <li><a class="" href="holidays">Holidays</a></li>
             <li>
               <a class="" href="leaves"
                 >Leaves (Admin)
@@ -79,12 +79,12 @@
             <li>
               <a class="" href="shift_scheduling">Shift & Schedule</a>
             </li>
-            <li><a class="" href="overtime">Overtime</a></li>
+            <li><a class="" href="overtime">Overtime</a></li> -->
           </ul>
         </li>
-        <li class="">
+        <!-- <li class="">
           <a href="clients"><i class="la la-users"></i> <span>Clients</span></a>
-        </li>
+        </li> -->
         <li class="submenu">
           <a href="#"
             ><i class="la la-rocket"></i> <span> Projects</span>
@@ -155,7 +155,7 @@
             ><i class="la la-file-pdf-o"></i> <span>Policies</span></a
           >
         </li> -->
-        <li class="submenu">
+        <!-- <li class="submenu">
           <a href="#"
             ><i class="la la-pie-chart"></i> <span> Reports </span>
             <span class="menu-arrow"></span
@@ -180,14 +180,14 @@
             </li>
             <li>
               <a class="" href="payslip_reports"> Payslip Report </a>
-            </li>
-            <!-- <li>
+            </li> -->
+        <!-- <li>
               <a class="" href="attendance_reports"> Attendance Report </a>
             </li>
             <li><a class="" href="leave_reports"> Leave Report </a></li>
             <li><a class="" href="daily_reports"> Daily Report </a></li> -->
-          </ul>
-        </li>
+        <!-- </ul> -->
+        <!-- </li> -->
         <li class="menu-title">
           <span>Performance</span>
         </li>
@@ -290,7 +290,7 @@
             </li>
           </ul>
         </li> -->
-        <li class="">
+        <!-- <li class="">
           <a href="knowledgebase"
             ><i class="la la-question"></i> <span>Knowledgebase</span></a
           >
@@ -320,7 +320,7 @@
               <a class="" href="clients_profile"> Client Profile </a>
             </li>
           </ul>
-        </li>
+        </li> -->
         <li class="submenu">
           <a href="#"
             ><i class="la la-key"></i> <span> Authentication </span>
@@ -336,7 +336,7 @@
             <li><a class="" href="auth-lock-screen"> Lock Screen </a></li>
           </ul>
         </li>
-        <li class="submenu">
+        <!-- <li class="submenu">
           <a href="#"
             ><i class="la la-exclamation-triangle"></i>
             <span> Error Pages </span> <span class="menu-arrow"></span
@@ -345,8 +345,8 @@
             <li><a class="" href="error-404">404 Error </a></li>
             <li><a class="" href="error-500">500 Error </a></li>
           </ul>
-        </li>
-        <li class="submenu">
+        </li> -->
+        <!-- <li class="submenu">
           <a href="#"
             ><i class="la la-hand-o-up"></i> <span> Subscriptions </span>
             <span class="menu-arrow"></span
@@ -379,7 +379,7 @@
             </li>
             <li><a class="" href="blank_page"> Blank Page </a></li>
           </ul>
-        </li>
+        </li> -->
         <!-- <li class="menu-title">
           <span>UI Interface</span>
         </li>
@@ -413,7 +413,7 @@
             <li><a class="" href="c3_charts">C3 Charts</a></li>
           </ul>
         </li> -->
-        <li class="submenu">
+        <!-- <li class="submenu">
           <a href="#"
             ><i class="la la-object-group"></i> <span> Forms </span>
             <span class="menu-arrow"></span
@@ -434,8 +434,8 @@
               <a class="" href="form_validation"> Form Validation </a>
             </li>
           </ul>
-        </li>
-        <li class="submenu">
+        </li> -->
+        <!-- <li class="submenu">
           <a href="#"
             ><i class="la la-table"></i> <span> Tables </span>
             <span class="menu-arrow"></span
@@ -444,7 +444,7 @@
             <li><a class="" href="table_basic">Basic Tables </a></li>
             <li><a class="" href="data_tables">Data Table </a></li>
           </ul>
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
