--- a/src/app/components/employees/add-employee/add-employee.component.html
+++ b/src/app/components/employees/add-employee/add-employee.component.html
@@ -59,7 +59,7 @@
   </div>
 </div> -->
 
-<div class="row">
+<!-- <div class="row">
   <div class="col-lg-3"><app-sidebar></app-sidebar></div>
   <div class="col-lg-9">
     <div class="mt-10 sm:mt-0">
@@ -67,10 +67,10 @@
         <div class="md:col-span-1">
           <div class="px-4 sm:px-0">
             <h3 class="text-lg font-medium leading-6 text-gray-900">
-              Edit Information
-            </h3>
-            <!-- <p class="mt-1 text-sm text-gray-600">Use a permanent address where you can receive mail.</p> -->
-          </div>
+              Add Information
+            </h3> -->
+<!-- <p class="mt-1 text-sm text-gray-600">Use a permanent address where you can receive mail.</p> -->
+<!-- </div>
         </div>
         <div class="mt-1 md:mt-0 md:col-span-2">
           <form #form="ngForm" (ngSubmit)="addEmployees()">
@@ -91,14 +91,14 @@
                       class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
                       [(ngModel)]="addEmployee.name"
                     />
-                  </div>
+                  </div> -->
 
-                  <!-- <div class="col-span-6 sm:col-span-3">
+<!-- <div class="col-span-6 sm:col-span-3">
                 <label for="last-name" class="block text-sm font-medium text-gray-700">Last name</label>
                 <input type="text" name="last-name" id="last-name" autocomplete="family-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
               </div> -->
 
-                  <div class="col-span-6 sm:col-span-4">
+<!-- <div class="col-span-6 sm:col-span-4">
                     <label
                       for="email-address"
                       class="block text-sm font-medium text-gray-700"
@@ -119,13 +119,13 @@
                       for="phone"
                       class="block text-sm font-medium text-gray-700"
                       >Phone Number</label
-                    >
-                    <!-- <select id="country" name="country" autocomplete="country-name" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                    > -->
+<!-- <select id="country" name="country" autocomplete="country-name" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
                   <option>United States</option>
                   <option>Canada</option>
                   <option>Mexico</option>
                 </select> -->
-                    <input
+<!-- <input
                       type="number"
                       name="phone"
                       id="phone"
@@ -133,14 +133,14 @@
                       class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
                       [(ngModel)]="addEmployee.phone"
                     />
-                  </div>
+                  </div> -->
 
-                  <!-- <div class="col-span-6">
+<!-- <div class="col-span-6">
                 <label for="street-address" class="block text-sm font-medium text-gray-700">Street address</label>
                 <input type="text" name="street-address" id="street-address" autocomplete="street-address" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
               </div> -->
 
-                  <div class="col-span-6 sm:col-span-6 lg:col-span-2">
+<!-- <div class="col-span-6 sm:col-span-6 lg:col-span-2">
                     <label
                       for="salary"
                       class="block text-sm font-medium text-gray-700"
@@ -176,7 +176,7 @@
                     <label
                       for="postal-code"
                       class="block text-sm font-medium text-gray-700"
-                      >ZIP / Postal code</label
+                      >Staff ID</label
                     >
                     <input
                       type="text"
@@ -184,6 +184,7 @@
                       id="postal-code"
                       autocomplete="postal-code"
                       class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+                      [(ngModel)]="addEmployee.staffID"
                     />
                   </div>
                 </div>
@@ -202,4 +203,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
