--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -35,25 +35,33 @@
                   <div class="row">
                     <div class="col-md-5">
                       <div class="profile-info-left">
-                        <h3 class="user-name m-t-0 mb-0">John Doe</h3>
+                        <h3 class="user-name m-t-0 mb-0">
+                          {{ profile.name }}
+                        </h3>
                         <h6 class="text-muted">UI/UX Design Team</h6>
-                        <small class="text-muted">Web Designer</small>
-                        <div class="staff-id">Employee ID : FT-0001</div>
+                        <small class="text-muted">{{
+                          profile.department
+                        }}</small>
+                        <div class="staff-id">
+                          Employee ID :{{ profile.staffID }}
+                        </div>
                         <div class="small doj text-muted">
                           Date of Join : 1st Jan 2013
                         </div>
-                        <div class="staff-msg">
+                        <!-- <div class="staff-msg">
                           <a class="btn btn-custom" href="apps-chat"
                             >Send Message</a
                           >
-                        </div>
+                        </div> -->
                       </div>
                     </div>
                     <div class="col-md-7">
                       <ul class="personal-info">
                         <li>
                           <div class="title">Phone:</div>
-                          <div class="text"><a href="">9876543210</a></div>
+                          <div class="text">
+                            <a href="">{{ profile.phone }}</a>
+                          </div>
                         </li>
                         <li>
                           <div class="title">Email:</div>
@@ -62,14 +70,14 @@
                               ><span
                                 class="__cf_email__"
                                 data-cfemail="6c060304020803092c09140d011c0009420f0301"
-                                >[email&#160;protected]</span
+                                >{{ profile.email }}</span
                               ></a
                             >
                           </div>
                         </li>
                         <li>
                           <div class="title">Birthday:</div>
-                          <div class="text">24th July</div>
+                          <div class="text">{{ profile.dateOfBirth }}</div>
                         </li>
                         <li>
                           <div class="title">Address:</div>
