restructured and corrected login issue

--- a/src/app/employee-dashboard/employee-dashboard.component.html
+++ b/src/app/employee-dashboard/employee-dashboard.component.html
@@ -1,4 +1,5 @@
 <!-- <p>employee-dashboard works!</p> -->
+
 <body data-layout-mode="dark" data-topbar="dark" data-sidebar="dark">
   <div class="main-wrapper">
     <app-sidebar></app-sidebar>
@@ -9,10 +10,7 @@
           <div class="col-md-12">
             <div class="welcome-box">
               <div class="welcome-img">
-                <img
-                  alt=""
-                  src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/img/profiles/avatar-02.jpg"
-                />
+                <i class="prof bi bi-person-circle me-5"></i>
               </div>
               <div class="welcome-det">
                 <h3>Welcome, {{ eachEmployee.name }}</h3>
@@ -39,8 +37,7 @@
                         <div class="e-avatar">
                           <img
                             src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/img/profiles/avatar-09.jpg"
-                            alt=""
-                          />
+                            alt="" />
                         </div>
                       </div>
                     </div>
@@ -59,8 +56,7 @@
                         <div class="e-avatar">
                           <img
                             src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/img/profiles/avatar-02.jpg"
-                            alt=""
-                          />
+                            alt="" />
                         </div>
                       </div>
                     </div>
@@ -79,8 +75,7 @@
                         <div class="e-avatar">
                           <img
                             src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/img/profiles/avatar-02.jpg"
-                            alt=""
-                          />
+                            alt="" />
                         </div>
                       </div>
                     </div>
@@ -101,16 +96,12 @@
                         <p>2 people will be away tomorrow</p>
                       </div>
                       <div class="dash-card-avatars">
-                        <a href="#" class="e-avatar"
-                          ><img
+                        <a href="#" class="e-avatar"><img
                             src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/img/profiles/avatar-04.jpg"
-                            alt=""
-                        /></a>
-                        <a href="#" class="e-avatar"
-                          ><img
+                            alt="" /></a>
+                        <a href="#" class="e-avatar"><img
                             src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/img/profiles/avatar-08.jpg"
-                            alt=""
-                        /></a>
+                            alt="" /></a>
                       </div>
                     </div>
                   </div>
@@ -130,16 +121,12 @@
                         <p>2 people are going to be away</p>
                       </div>
                       <div class="dash-card-avatars">
-                        <a href="#" class="e-avatar"
-                          ><img
+                        <a href="#" class="e-avatar"><img
                             src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/img/profiles/avatar-05.jpg"
-                            alt=""
-                        /></a>
-                        <a href="#" class="e-avatar"
-                          ><img
+                            alt="" /></a>
+                        <a href="#" class="e-avatar"><img
                             src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/img/profiles/avatar-07.jpg"
-                            alt=""
-                        /></a>
+                            alt="" /></a>
                       </div>
                     </div>
                   </div>
@@ -157,8 +144,7 @@
                         <div class="e-avatar">
                           <img
                             src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/img/profiles/avatar-02.jpg"
-                            alt=""
-                          />
+                            alt="" />
                         </div>
                       </div>
                     </div>
