--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -23,7 +23,7 @@
               action="https://smarthr-ci.dreamguystech.com/template/dark/public/dashboard"
             >
               <div class="form-group">
-                <label for="staffID" class="form-label">Email</label>
+                <label for="staffID" class="form-label">Staff ID</label>
                 <input
                   type="text"
                   class="form-control"
