--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -7,10 +7,8 @@
           <span>Main</span>
         </li>
         <li class="submenu">
-          <a href="#"
-            ><i class="la la-dashboard"></i> <span> Dashboard</span>
-            <span class="menu-arrow"></span
-          ></a>
+          <a href="#"><i class="la la-dashboard"></i> <span> Dashboard</span>
+            <span class="menu-arrow"></span></a>
           <ul style="display: none">
             <li><a class="" href="dashboard">Admin Dashboard</a></li>
             <li>
@@ -50,10 +48,8 @@
           <span>Employees</span>
         </li>
         <li class="submenu">
-          <a href="#" class="noti-dot"
-            ><i class="la la-user"></i> <span> Employees</span>
-            <span class="menu-arrow"></span
-          ></a>
+          <a href="#" class="noti-dot"><i class="la la-user"></i> <span> Employees</span>
+            <span class="menu-arrow"></span></a>
           <ul style="display: none">
             <li><a class="" href="employees">All Employees</a></li>
             <!-- <li><a class="" href="holidays">Holidays</a></li>
@@ -86,10 +82,8 @@
           <a href="clients"><i class="la la-users"></i> <span>Clients</span></a>
         </li> -->
         <li class="submenu">
-          <a href="#"
-            ><i class="la la-rocket"></i> <span> Projects</span>
-            <span class="menu-arrow"></span
-          ></a>
+          <a href="#"><i class="la la-rocket"></i> <span> Projects</span>
+            <span class="menu-arrow"></span></a>
           <ul style="display: none">
             <li><a class="" href="projects">Projects</a></li>
             <li><a class="" href="tasks">Tasks</a></li>
@@ -97,14 +91,10 @@
           </ul>
         </li>
         <li class="">
-          <a href="leads"
-            ><i class="la la-user-secret"></i> <span>Leads</span></a
-          >
+          <a href="leads"><i class="la la-user-secret"></i> <span>Leads</span></a>
         </li>
         <li class="">
-          <a href="tickets"
-            ><i class="la la-ticket"></i> <span>Tickets</span></a
-          >
+          <a href="tickets"><i class="la la-ticket"></i> <span>Tickets</span></a>
         </li>
         <!-- <li class="menu-title">
           <span>HR</span>
@@ -140,10 +130,8 @@
           </ul>
         </li> -->
         <li class="submenu">
-          <a href="#"
-            ><i class="la la-money"></i> <span> Payroll </span>
-            <span class="menu-arrow"></span
-          ></a>
+          <a href="#"><i class="la la-money"></i> <span> Payroll </span>
+            <span class="menu-arrow"></span></a>
           <ul style="display: none">
             <li><a class="" href="salary"> Employee Salary </a></li>
             <li><a class="" href="salary_view"> Payslip </a></li>
@@ -192,10 +180,8 @@
           <span>Performance</span>
         </li>
         <li class="submenu">
-          <a href="#"
-            ><i class="la la-graduation-cap"></i> <span> Performance </span>
-            <span class="menu-arrow"></span
-          ></a>
+          <a href="#"><i class="la la-graduation-cap"></i> <span> Performance </span>
+            <span class="menu-arrow"></span></a>
           <ul style="display: none">
             <li>
               <a class="" href="performance_indicator">
@@ -223,10 +209,8 @@
           </ul>
         </li> -->
         <li class="submenu">
-          <a href="#"
-            ><i class="la la-edit"></i> <span> Training </span>
-            <span class="menu-arrow"></span
-          ></a>
+          <a href="#"><i class="la la-edit"></i> <span> Training </span>
+            <span class="menu-arrow"></span></a>
           <ul style="display: none">
             <li><a class="" href="training"> Training List </a></li>
             <li><a class="" href="trainers"> Trainers</a></li>
@@ -234,20 +218,14 @@
           </ul>
         </li>
         <li class="">
-          <a href="promotions"
-            ><i class="la la-bullhorn"></i> <span>Promotion</span></a
-          >
+          <a href="promotions"><i class="la la-bullhorn"></i> <span>Promotion</span></a>
         </li>
         <li class="">
-          <a href="resignation"
-            ><i class="la la-external-link-square"></i>
-            <span>Resignation</span></a
-          >
+          <a href="resignation"><i class="la la-external-link-square"></i>
+            <span>Resignation</span></a>
         </li>
         <li class="">
-          <a href="termination"
-            ><i class="la la-times-circle"></i> <span>Termination</span></a
-          >
+          <a href="termination"><i class="la la-times-circle"></i> <span>Termination</span></a>
         </li>
         <!-- <li class="menu-title">
           <span>Administration</span>
@@ -322,10 +300,8 @@
           </ul>
         </li> -->
         <li class="submenu">
-          <a href="#"
-            ><i class="la la-key"></i> <span> Authentication </span>
-            <span class="menu-arrow"></span
-          ></a>
+          <a href="#"><i class="la la-key"></i> <span> Authentication </span>
+            <span class="menu-arrow"></span></a>
           <ul style="display: none">
             <li><a class="" href="login"> Login </a></li>
             <li><a class="" href="register"> Register </a></li>
