--- a/src/app/components/employees/employees-list/employees-list.component.html
+++ b/src/app/components/employees/employees-list/employees-list.component.html
@@ -46,20 +46,11 @@
               </ul>
             </div>
             <div class="col-auto float-end ms-auto">
-              <a
-                href="#"
-                class="btn add-btn"
-                data-bs-toggle="modal"
-                data-bs-target="#add_employee"
-                ><i class="fa fa-plus"></i> Add Employee</a
-              >
+              <a href="#" class="btn add-btn" data-bs-toggle="modal" data-bs-target="#add_employee"><i
+                  class="fa fa-plus"></i> Add Employee</a>
               <div class="view-icons">
-                <a href="employees" class="grid-view btn btn-link active"
-                  ><i class="fa fa-th"></i
-                ></a>
-                <a href="employees_list" class="list-view btn btn-link"
-                  ><i class="fa fa-bars"></i
-                ></a>
+                <a href="employees" class="grid-view btn btn-link active"><i class="fa fa-th"></i></a>
+                <a href="employees_list" class="list-view btn btn-link"><i class="fa fa-bars"></i></a>
               </div>
             </div>
           </div>
@@ -97,41 +88,19 @@
         </div>
 
         <div class="row">
-          <div
-            class="container col-md-4 col-sm-6 col-12 col-lg-4 col-xl-3 profile-container"
-          >
+          <div class="container col-md-4 col-sm-6 col-12 col-lg-4 col-xl-3 profile-container">
             <div class="profile-widget" *ngFor="let employee of employees">
               <div class="profile-img">
-                <a href="profile" class="avatar"
-                  ><img
-                    src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/img/profiles/avatar-02.jpg"
-                    alt=""
-                /></a>
+                <a href="profile" class="avatar"><i class="prof bi bi-person-circle me-5"></i></a>
               </div>
               <div class="dropdown profile-action">
-                <a
-                  href="#"
-                  class="action-icon dropdown-toggle"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                  ><i class="material-icons">more_vert</i></a
-                >
+                <a href="#" class="action-icon dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"><i
+                    class="material-icons">more_vert</i></a>
                 <div class="dropdown-menu dropdown-menu-right">
-                  <a
-                    class="dropdown-item"
-                    href="#"
-                    data-bs-toggle="modal"
-                    (click)="editEmployee(employee.id)"
-                    data-bs-target="#edit_employee"
-                    ><i class="fa fa-pencil m-r-5"></i> Edit</a
-                  >
-                  <a
-                    class="dropdown-item"
-                    href="#"
-                    data-bs-toggle="modal"
-                    data-bs-target="#delete_employee"
-                    ><i class="fa fa-trash-o m-r-5"></i> Delete</a
-                  >
+                  <a class="dropdown-item" href="#" data-bs-toggle="modal" (click)="editEmployee(employee.id)"
+                    data-bs-target="#edit_employee"><i class="fa fa-pencil m-r-5"></i> Edit</a>
+                  <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#delete_employee"><i
+                      class="fa fa-trash-o m-r-5"></i> Delete</a>
                 </div>
               </div>
               <h4 class="user-name m-t-10 mb-0 text-ellipsis">
@@ -662,12 +631,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title">Add Employee</h5>
-              <button
-                type="button"
-                class="close"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              >
+              <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
@@ -676,15 +640,8 @@
                 <div class="row">
                   <div class="col-sm-6">
                     <div class="form-group">
-                      <label class="col-form-label"
-                        >Full Name <span class="text-danger">*</span></label
-                      >
-                      <input
-                        class="form-control"
-                        type="text"
-                        name="name"
-                        [(ngModel)]="addEmployee.name"
-                      />
+                      <label class="col-form-label">Full Name <span class="text-danger">*</span></label>
+                      <input class="form-control" type="text" name="name" [(ngModel)]="addEmployee.name" />
                     </div>
                   </div>
                   <!-- <div class="col-sm-6">
@@ -703,26 +660,14 @@
                   </div> -->
                   <div class="col-sm-6">
                     <div class="form-group">
-                      <label class="col-form-label"
-                        >Email <span class="text-danger">*</span></label
-                      >
-                      <input
-                        class="form-control"
-                        type="email"
-                        name="email"
-                        [(ngModel)]="addEmployee.email"
-                      />
+                      <label class="col-form-label">Email <span class="text-danger">*</span></label>
+                      <input class="form-control" type="email" name="email" [(ngModel)]="addEmployee.email" />
                     </div>
                   </div>
                   <div class="col-sm-6">
                     <div class="form-group">
                       <label class="col-form-label">Password</label>
-                      <input
-                        class="form-control"
-                        type="password"
-                        name="password"
-                        [(ngModel)]="addEmployee.password"
-                      />
+                      <input class="form-control" type="password" name="password" [(ngModel)]="addEmployee.password" />
                     </div>
                   </div>
                   <!-- <div class="col-sm-6">
@@ -733,15 +678,8 @@
                   </div> -->
                   <div class="col-sm-6">
                     <div class="form-group">
-                      <label class="col-form-label"
-                        >Staff ID <span class="text-danger">*</span></label
-                      >
-                      <input
-                        type="text"
-                        class="form-control"
-                        name="staffID"
-                        [(ngModel)]="addEmployee.staffID"
-                      />
+                      <label class="col-form-label">Staff ID <span class="text-danger">*</span></label>
+                      <input type="text" class="form-control" name="staffID" [(ngModel)]="addEmployee.staffID" />
                     </div>
                   </div>
                   <!-- <div class="col-sm-6">
@@ -760,12 +698,7 @@
                   <div class="col-sm-6">
                     <div class="form-group">
                       <label class="col-form-label">Phone </label>
-                      <input
-                        class="form-control"
-                        type="number"
-                        name="phone"
-                        [(ngModel)]="addEmployee.phone"
-                      />
+                      <input class="form-control" type="number" name="phone" [(ngModel)]="addEmployee.phone" />
                     </div>
                   </div>
                   <!-- <div class="col-sm-6">
@@ -779,15 +712,8 @@
                   </div> -->
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label class="col-form-label"
-                        >Department <span class="text-danger">*</span></label
-                      >
-                      <input
-                        class="form-control"
-                        type="text"
-                        name="department"
-                        [(ngModel)]="addEmployee.department"
-                      />
+                      <label class="col-form-label">Department <span class="text-danger">*</span></label>
+                      <input class="form-control" type="text" name="department" [(ngModel)]="addEmployee.department" />
                       <!-- <select class="select">
                         <option>Select Department</option>
                         <option>Web Development</option>
@@ -1007,19 +933,11 @@
       </div>
 
       <div id="edit_employee" class="modal custom-modal fade" role="dialog">
-        <div
-          class="modal-dialog modal-dialog-centered modal-lg"
-          role="document"
-        >
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title">Edit Employee</h5>
-              <button
-                type="button"
-                class="close"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              >
+              <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
@@ -1028,16 +946,9 @@
                 <div class="row">
                   <div class="col-sm-6">
                     <div class="form-group">
-                      <label class="col-form-label"
-                        >Full Name <span class="text-danger">*</span></label
-                      >
-                      <input
-                        class="form-control"
-                        value="John"
-                        type="text"
-                        name="name"
-                        [(ngModel)]="employeeDetails.name"
-                      />
+                      <label class="col-form-label">Full Name <span class="text-danger">*</span></label>
+                      <input class="form-control" value="John" type="text" name="name"
+                        [(ngModel)]="employeeDetails.name" />
                     </div>
                   </div>
                   <!-- <div class="col-sm-6">
@@ -1056,28 +967,16 @@
                   </div> -->
                   <div class="col-sm-6">
                     <div class="form-group">
-                      <label class="col-form-label"
-                        >Email <span class="text-danger">*</span></label
-                      >
-                      <input
-                        class="form-control"
-                        value="johndoe@example.com"
-                        type="email"
-                        name="email"
-                        [(ngModel)]="employeeDetails.email"
-                      />
+                      <label class="col-form-label">Email <span class="text-danger">*</span></label>
+                      <input class="form-control" value="johndoe@example.com" type="email" name="email"
+                        [(ngModel)]="employeeDetails.email" />
                     </div>
                   </div>
                   <div class="col-sm-6">
                     <div class="form-group">
                       <label class="col-form-label">Password</label>
-                      <input
-                        class="form-control"
-                        value="johndoe"
-                        type="password"
-                        name="password"
-                        [(ngModel)]="employeeDetails.password"
-                      />
+                      <input class="form-control" value="johndoe" type="password" name="password"
+                        [(ngModel)]="employeeDetails.password" />
                     </div>
                   </div>
                   <!-- <div class="col-sm-6">
@@ -1092,17 +991,9 @@
                   </div> -->
                   <div class="col-sm-6">
                     <div class="form-group">
-                      <label class="col-form-label"
-                        >Staff ID <span class="text-danger">*</span></label
-                      >
-                      <input
-                        type="text"
-                        value="FT-0001"
-                        readonly
-                        class="form-control floating"
-                        name="staffID"
-                        [(ngModel)]="employeeDetails.staffID"
-                      />
+                      <label class="col-form-label">Staff ID <span class="text-danger">*</span></label>
+                      <input type="text" value="FT-0001" readonly class="form-control floating" name="staffID"
+                        [(ngModel)]="employeeDetails.staffID" />
                     </div>
                   </div>
                   <!-- <div class="col-sm-6">
@@ -1121,13 +1012,8 @@
                   <div class="col-sm-6">
                     <div class="form-group">
                       <label class="col-form-label">Phone </label>
-                      <input
-                        class="form-control"
-                        value="9876543210"
-                        type="text"
-                        name="phone"
-                        [(ngModel)]="employeeDetails.phone"
-                      />
+                      <input class="form-control" value="9876543210" type="text" name="phone"
+                        [(ngModel)]="employeeDetails.phone" />
                     </div>
                   </div>
                   <!-- <div class="col-sm-6">
@@ -1142,14 +1028,8 @@
                   </div> -->
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label
-                        >Department <span class="text-danger">*</span></label
-                      >
-                      <input
-                        type="text"
-                        name="department"
-                        [(ngModel)]="employeeDetails.department"
-                      />
+                      <label>Department <span class="text-danger">*</span></label>
+                      <input type="text" name="department" [(ngModel)]="employeeDetails.department" />
                       <!-- <select class="select">
                         <option>Select Department</option>
                         <option>Web Development</option>
@@ -1379,20 +1259,11 @@
               <div class="modal-btn delete-action">
                 <div class="row">
                   <div class="col-6">
-                    <a
-                      href="javascript:void(0);"
-                      class="btn btn-primary continue-btn"
-                      (click)="deleteEmployee(employeeDetails.id)"
-                      >Delete</a
-                    >
+                    <a href="javascript:void(0);" class="btn btn-primary continue-btn"
+                      (click)="deleteEmployee(employeeDetails.id)">Delete</a>
                   </div>
                   <div class="col-6">
-                    <a
-                      href="javascript:void(0);"
-                      data-bs-dismiss="modal"
-                      class="btn btn-primary cancel-btn"
-                      >Cancel</a
-                    >
+                    <a href="javascript:void(0);" data-bs-dismiss="modal" class="btn btn-primary cancel-btn">Cancel</a>
                   </div>
                 </div>
               </div>
