--- a/src/app/salary/salary.component.html
+++ b/src/app/salary/salary.component.html
@@ -1,4 +1,5 @@
 <!-- <p>salary works!</p> -->
+
 <body>
   <div class="main-wrapper">
     <app-sidebar></app-sidebar>
@@ -16,13 +17,8 @@
               </ul>
             </div>
             <div class="col-auto float-end ms-auto">
-              <a
-                href="#"
-                class="btn add-btn"
-                data-bs-toggle="modal"
-                data-bs-target="#add_salary"
-                ><i class="fa fa-plus"></i> Add Salary</a
-              >
+              <a href="#" class="btn add-btn" data-bs-toggle="modal" data-bs-target="#add_salary"><i
+                  class="fa fa-plus"></i> Add Salary</a>
             </div>
           </div>
         </div>
@@ -30,7 +26,7 @@
         <div class="row filter-row">
           <div class="col-sm-6 col-md-3 col-lg-3 col-xl-2 col-12">
             <div class="form-group form-focus">
-              <input type="text" class="form-control floating" />
+              <input type="text" class="form-control floating" [(ngModel)]="name" (ngModelChange)="Search()" />
               <label class="focus-label">Employee Name</label>
             </div>
           </div>
@@ -56,10 +52,7 @@
           <div class="col-sm-6 col-md-3 col-lg-3 col-xl-2 col-12">
             <div class="form-group form-focus">
               <div class="cal-icon">
-                <input
-                  class="form-control floating datetimepicker"
-                  type="text"
-                />
+                <input class="form-control floating datetimepicker" type="text" />
               </div>
               <label class="focus-label">From</label>
             </div>
@@ -67,10 +60,7 @@
           <div class="col-sm-6 col-md-3 col-lg-3 col-xl-2 col-12">
             <div class="form-group form-focus">
               <div class="cal-icon">
-                <input
-                  class="form-control floating datetimepicker"
-                  type="text"
-                />
+                <input class="form-control floating datetimepicker" type="text" />
               </div>
               <label class="focus-label">To</label>
             </div>
@@ -83,48 +73,38 @@
         <div class="row">
           <div class="col-md-12">
             <div class="table-responsive">
-              <table
-                class="table table-striped custom-table datatable"
-                *ngIf="employees && employees.length > 0"
-              >
+              <table class="table table-striped custom-table datatable" *ngIf="employees && employees.length > 0">
                 <thead>
                   <tr>
                     <th>Employee</th>
+                    <th>Role</th>
                     <th>Employee ID</th>
                     <th>Email</th>
-                    <th>Join Date</th>
-                    <!-- <th>Role</th> -->
+                    <th>Status</th>
                     <th>Salary</th>
                     <th>Payslip</th>
                     <th class="text-end">Action</th>
                   </tr>
                 </thead>
-                <tbody *ngFor="let employee of employees">
+                <tbody *ngFor="
+                    let employee of employees
+                      | paginate
+                        : {
+                            itemsPerPage: 5,
+                            currentPage: p,
+                            id: '3'
+                          }
+                  ">
                   <tr>
                     <td>
                       <h2 class="table-avatar">
-                        <a href="profile" class="avatar"
-                          ><img
-                            alt=""
-                            src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/img/profiles/avatar-02.jpg"
-                        /></a>
-                        <a href="profile"
-                          >{{ employee.name }} <span>Web Designer</span></a
-                        >
+                        <a href="profile" class="avatar"><i class="bi bi-person-circle me-3"></i></a>
+                        <a href="profile">{{ employee.name }}</a>
                       </h2>
                     </td>
-                    <td>{{ employee.staffID }}</td>
                     <td>
-                      <a
-                        href="/cdn-cgi/l/email-protection"
-                        class="__cf_email__"
-                        data-cfemail="03696c6b6d676c6643667b626e736f662d606c6e"
-                        >{{ employee.email }}</a
-                      >
-                    </td>
-                    <td>1 Jan 2013</td>
-                    <!-- <td>
-                      <div class="dropdown">
+                      {{ employee.department }}
+                      <!-- <div class="dropdown">
                         <a
                           href=""
                           class="btn btn-white btn-sm btn-rounded dropdown-toggle"
@@ -142,38 +122,27 @@
                           >
                           <a class="dropdown-item" href="#">UI/UX Developer</a>
                         </div>
-                      </div>
-                    </td> -->
+                      </div> -->
+                    </td>
+                    <td>{{ employee.staffID }}</td>
+                    <td>
+                      <a href="/cdn-cgi/l/email-protection" class="__cf_email__"
+                        data-cfemail="03696c6b6d676c6643667b626e736f662d606c6e">{{ employee.email }}</a>
+                    </td>
+                    <td>{{ employee.status }}</td>
                     <td>{{ employee.salary | number }}</td>
                     <td>
-                      <a class="btn btn-sm btn-primary" href="salary_view"
-                        >Generate Slip</a
-                      >
+                      <a class="btn btn-sm btn-primary" href="salary_view">Generate Slip</a>
                     </td>
                     <td class="text-end">
                       <div class="dropdown dropdown-action">
-                        <a
-                          href="#"
-                          class="action-icon dropdown-toggle"
-                          data-bs-toggle="dropdown"
-                          aria-expanded="false"
-                          ><i class="material-icons">more_vert</i></a
-                        >
+                        <a href="#" class="action-icon dropdown-toggle" data-bs-toggle="dropdown"
+                          aria-expanded="false"><i class="material-icons">more_vert</i></a>
                         <div class="dropdown-menu dropdown-menu-right">
-                          <a
-                            class="dropdown-item"
-                            href="#"
-                            data-bs-toggle="modal"
-                            data-bs-target="#edit_salary"
-                            ><i class="fa fa-pencil m-r-5"></i> Edit</a
-                          >
-                          <a
-                            class="dropdown-item"
-                            href="#"
-                            data-bs-toggle="modal"
-                            data-bs-target="#delete_salary"
-                            ><i class="fa fa-trash-o m-r-5"></i> Delete</a
-                          >
+                          <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#edit_salary"><i
+                              class="fa fa-pencil m-r-5"></i> Edit</a>
+                          <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#delete_salary"><i
+                              class="fa fa-trash-o m-r-5"></i> Delete</a>
                         </div>
                       </div>
                     </td>
@@ -959,6 +928,7 @@
                     </td>
                   </tr> -->
                 </tbody>
+                <pagination-controls id="3" (pageChange)="p = $event"></pagination-controls>
               </table>
             </div>
           </div>
@@ -966,19 +936,11 @@
       </div>
 
       <div id="add_salary" class="modal custom-modal fade" role="dialog">
-        <div
-          class="modal-dialog modal-dialog-centered modal-lg"
-          role="document"
-        >
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title">Add Staff Salary</h5>
-              <button
-                type="button"
-                class="close"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              >
+              <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
@@ -1079,19 +1041,11 @@
       </div>
 
       <div id="edit_salary" class="modal custom-modal fade" role="dialog">
-        <div
-          class="modal-dialog modal-dialog-centered modal-md"
-          role="document"
-        >
+        <div class="modal-dialog modal-dialog-centered modal-md" role="document">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title">Edit Staff Salary</h5>
-              <button
-                type="button"
-                class="close"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              >
+              <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
@@ -1200,19 +1154,10 @@
               <div class="modal-btn delete-action">
                 <div class="row">
                   <div class="col-6">
-                    <a
-                      href="javascript:void(0);"
-                      class="btn btn-primary continue-btn"
-                      >Delete</a
-                    >
+                    <a href="javascript:void(0);" class="btn btn-primary continue-btn">Delete</a>
                   </div>
                   <div class="col-6">
-                    <a
-                      href="javascript:void(0);"
-                      data-bs-dismiss="modal"
-                      class="btn btn-primary cancel-btn"
-                      >Cancel</a
-                    >
+                    <a href="javascript:void(0);" data-bs-dismiss="modal" class="btn btn-primary cancel-btn">Cancel</a>
                   </div>
                 </div>
               </div>
